# Smart-Program-Template

./: .gitpod.yml  Cargo.toml  README.md
app/: Cargo.toml
app/src/: lib.rs
app/src/services/: service.rs
wasm/: app.idl  app_client.rs
