[package]
name = "app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gstd.workspace = true
sails-rs.workspace = true
session-service.workspace = true
extended-vft-client.workspace = true
extended-vnft-client.workspace = true
extended-vmt-client.workspace = true
extended-vmt.workspace = true
extended-vft.workspace = true
extended-vnft.workspace = true
keyring-service.workspace = true


